--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/node": "^16.4.7",
+        "prettier": "^2.3.2",
         "ts-node-dev": "^1.1.8",
-        "typescript": "^4.3.5",
-        "prettier": "^2.3.2"
+        "typescript": "^4.3.5"
     }
 }
